# ft_irc

./: CMakeLists.txt  Makefile  ircserv
includes/: Channels.hpp  Client.hpp  IRC.hpp  Server.hpp
srcs/: Channels.cpp  Client.cpp  IRC.cpp  IRC_cmd.cpp  Server.cpp  Server_cmd.cpp  auth.cpp  authorization.cpp  away.cpp  handler.cpp  main.cpp  privmsg.cpp  req_client.cpp  request.cpp  resp_serv.cpp  response.cpp  utils.cpp
